comming final changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-  
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <!--left on step 2 under assigment-->
-        <ul>
+        <ul class="links">
            <li><a href="recipes/pizza_recipe.html">pizza</a></li>
             <li><a href="recipes/orangechicken.html">orangechicken</a></li>
             <li><a href="recipes/burgers.html">Burger</a></li>
